# bug_tracker

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
bug_tracker/: config.py  html.py  launchpad.py  rrd.py
bug_tracker/tests/: test_bug_tracker.py
data/: README.md  bugs_new.rrd
html/: README.md  index.html
templates/: index.html.j2
