[project]
name = "bug-tracker"
version = "0.1.0"
description = "A simple script to collect new bugs for openstack nova"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1.6", "launchpadlib>=2.1.0"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "types-requests>=2.32.0.20250328",
]

[[tool.mypy.overrides]]
module = ["launchpadlib.launchpad"]
ignore_missing_imports = true
